--- a/src/assets/table.scss
+++ b/src/assets/table.scss
@@ -1,6 +1,3 @@
-.bang-gia {
-  overflow: scroll;
-}
 .bang-gia > table {
   --border-property: solid 1px #dcdcdc;
   overflow: scroll;
